[Cairo] Limit the number of active contexts in GraphicsContext3DCairo https://bugs.webkit.org/show_bug.cgi?id=166968

Reviewed by Alex Christensen.

Source/WebCore:

Cairo's implementation of GraphicsContext3D should follow the Mac's
and limit the number of active GraphicsContext3D objects.

The active contexts are listed in a global Deque, with the first
among them being recycled when the GraphicsContext3D::create()
function sees that the limit has been reached. That function still
returns null if even after recycling the number of contexts didn't
decrease.

Finally, in the GraphicsContext3D destructor, the context being
destroyed is removed from the list of active contexts.

No new tests -- relevant tests are now passing.

* platform/graphics/cairo/GraphicsContext3DCairo.cpp:
(WebCore::activeContexts):
(WebCore::GraphicsContext3D::create):
(WebCore::GraphicsContext3D::~GraphicsContext3D):

LayoutTests:

* platform/gtk/TestExpectations: Unskip WebGL tests that were failing
due to missing active context limit management.
* platform/wpe/TestExpectations: Ditto.


Canonical link: https://commits.webkit.org/196121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225260 268f45cc-cd09-0410-ab3c-d52691b4dbfc